...
    func updateTaskList(_ detailViewController: DetailViewController, recievedList: MasterList)
    func updatingCollaborators(_ detailViewController: DetailViewController, collaborators: Array<String>)
}

class DetailViewController: UITableViewController {

    var sectionheaders = ["Task", "History", "Collaborators"]
    var taskItem: Task?
    var collaborators = [String]()
    var peerToPeer: PeerToPeerManager?
    
    var delegate: DetailViewControllerDelegate? = nil
    
...
